--- a/src/styles/_annotation.scss
+++ b/src/styles/_annotation.scss
@@ -85,6 +85,10 @@
         
     }
 
+    .annotationContent {
+        margin-top: 0px;
+    }
+
     .annotationProfile {
         width: 24px;
         min-width: 24px;
